# SigilYX

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  PERFORMANCE.md  README.md  RELEASING.md  SECURITY.md  SPECIFICATION-E1.md  SPECIFICATION-E2.md  SPECIFICATION.md  THIRD_PARTY_LICENSES.md  ci.py  pyproject.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup-sccache/: action.yml
.github/workflows/: audit.yml  ci.yml  fuzz.yml  publish-crate.yml  publish-pypi.yml
benchmarks/: METHODOLOGY.md  README.md  SETUP_NOTES.md  benchmark.py  benchmark_comparisons.py  benchmark_cross_language.py  benchmark_python_formats.py  benchmark_streaming.py  benchmark_suite.py  benchmark_write_formats.py  benchmark_writer.py  generate_benchmark_data.py  generate_clean_data.py  pixi.toml  read_per_type.py  setup_benchmarks.ps1  test_cross_impl.py  test_roundtrip.py
benchmarks/cpp/: alteryx_benchmark.cpp  alteryx_dump.cpp  alteryx_write_benchmark.cpp  benchmark.cpp  build.bat  build_alteryx.bat  build_alteryx.ps1  build_alteryx_dump.bat  build_alteryx_write.bat  build_dump.bat  build_dump.ps1  dump.cpp
benchmarks/data/: blob_test.txt  gen_final.txt  gen_final2.txt  gen_log.txt  gen_log2.txt  gen_spatialobj.txt  read_per_type_results.txt
benchmarks/dotnet/: Program.cs  YxdbBenchmark.csproj
benchmarks/go/: go.mod  go.sum  main.go
benchmarks/rust/: Cargo.toml
benchmarks/rust/src/: main.rs
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json  wrangler.jsonc
docs/docs/: field-type-reference.md  intro.md  performance.md  specification.md
docs/docs/developer/: architecture.md  benchmarks.md  building.md  contributing.md  index.md  testing.md
docs/docs/python/: api-reference.md  index.md  installation.md  lazy-scan.md  metadata.md  pandas.md  polars.md  pyarrow.md  row-reader.md  spatial.md  streaming.md  writing.md
docs/docs/rust/: field-types.md  getting-started.md  index.md  reading.md  writing.md
docs/src/css/: custom.css
docs/static/: robots.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: detect_format.rs  e1_reader_open.rs  e2_reader_open.rs
python/: README.md
python/sigilyx/: __init__.py  _geo.py  _polars_plugin.py  _readers.py  _types.py  _writers.py
scripts/: check-release-ready.sh
sigilyx/: Cargo.toml  README.md  build.rs
sigilyx-python/: Cargo.toml
sigilyx-python/src/: lib.rs
sigilyx/examples/: mem_bench.rs
sigilyx/src/: error.rs  field.rs  header.rs  lib.rs  lzf.rs  reader.rs  record.rs  spatial.rs  writer.rs
sigilyx/src/e1/: header.rs  lzf.rs  mod.rs  reader.rs  record.rs  writer.rs
sigilyx/src/e2/: header.rs  mod.rs  reader.rs  record.rs
sigilyx/test_files/: not_a_yxdb.txt
sigilyx/tests/: integration.rs
tests/: conftest.py  test_alteryx_roundtrip.py  test_api_gaps.py  test_edge_cases.py  test_spatial_features.py  test_writer_quality.py  test_yxdb_reader.py
