[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sigilyx"
version = "0.1.0"
description = "SigilYX — High-performance YXDB file reader. Not affiliated with Alteryx, Inc."
readme = "README.md"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.9"
dependencies = ["polars>=0.20"]

[project.optional-dependencies]
arrow = ["pyarrow>=14.0"]
pandas = ["pandas>=1.5", "pyarrow>=14.0"]
all = ["pyarrow>=14.0", "pandas>=1.5"]

[tool.maturin]
manifest-path = "sigilyx-python/Cargo.toml"
python-source = "python"
module-name = "sigilyx.sigilyx"

[tool.pytest.ini_options]
testpaths = ["tests"]
