[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sigilyx"
version = "0.3.0"
description = "YXDB reader and writer for Python, backed by a Rust core."
readme = "python/README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Sigilweaver" }]
requires-python = ">=3.9"
dependencies = ["polars>=1.36.1"]
keywords = ["yxdb", "alteryx", "polars", "dataframe", "etl", "arrow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://sigilweaver.app/sigilyx/"
Repository = "https://github.com/Sigilweaver/SigilYX"
Documentation = "https://sigilweaver.app/sigilyx/"
Issues = "https://github.com/Sigilweaver/SigilYX/issues"
Changelog = "https://github.com/Sigilweaver/SigilYX/blob/main/CHANGELOG.md"

[project.optional-dependencies]
arrow = ["pyarrow>=21.0"]
pandas = ["pandas>=1.5", "pyarrow>=21.0"]
all = ["pyarrow>=21.0", "pandas>=1.5"]

[tool.maturin]
manifest-path = "sigilyx-python/Cargo.toml"
python-source = "python"
module-name = "sigilyx.sigilyx"
include = ["LICENSE", "python/README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pyarrow>=21.0", "psutil>=7.2.2"]
