[package]
name = "sigilyx-python"
version = "0.0.0"
edition = "2021"
description = "Python bindings for SigilYX — high-performance YXDB reader and writer"
license = "AGPL-3.0-only"
authors = ["Sigilweaver"]
repository = "https://github.com/Sigilweaver/sigilyx"
publish = false

[lib]
name = "sigilyx"
crate-type = ["cdylib"]

[dependencies]
sigilyx-core = { path = "../sigilyx", package = "sigilyx" }
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py39"] }
pyo3-polars = "0.26"
