[package]
name = "sigilyx-python"
version = "0.2.0"
edition = "2021"
description = "Python bindings for SigilYX -- YXDB reader and writer."
license = "Apache-2.0"
authors = ["Sigilweaver"]
repository = "https://github.com/Sigilweaver/SigilYX"
publish = false

[lib]
name = "sigilyx"
crate-type = ["cdylib"]

[dependencies]
sigilyx-core = { path = "../sigilyx", package = "sigilyx", version = "0.2.0" }
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py39", "generate-import-lib"] }
pyo3-polars = "0.26"
