[package]
name = "sigilyx"
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
description = "High-performance, standalone reader/writer for Alteryx .yxdb files."
license = "AGPL-3.0-only"
authors = ["Sigilweaver"]
repository = "https://github.com/Sigilweaver/sigilyx"
homepage = "https://sigilweaver.app/sigilyx/"
documentation = "https://docs.rs/sigilyx"
readme = "README.md"
keywords = ["yxdb", "alteryx", "polars", "dataframe", "etl"]
categories = ["parser-implementations", "encoding", "science"]
exclude = ["test_files/"]

[dependencies]
polars = { version = "0.53", features = ["dtype-date", "dtype-datetime", "dtype-time", "dtype-decimal", "dtype-duration", "dtype-i8", "dtype-i16", "ipc"] }
quick-xml = "0.39"
thiserror = "2"
rayon = "1.10"
memmap2 = "0.9"
arrow = { version = "0.53", package = "polars-arrow", default-features = false }

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"
