[package]
name = "sigilyx"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "Reader and writer for Alteryx .yxdb (E1, with experimental E2 read) files."
license = "Apache-2.0"
authors = ["Sigilweaver"]
repository = "https://github.com/Sigilweaver/SigilYX"
homepage = "https://sigilweaver.app/sigilyx/"
documentation = "https://docs.rs/sigilyx"
readme = "README.md"
keywords = ["yxdb", "alteryx", "polars", "dataframe", "etl"]
categories = ["parser-implementations", "encoding", "science"]
exclude = ["test_files/"]

[dependencies]
polars = { version = "0.53", features = [
    "dtype-date",
    "dtype-datetime",
    "dtype-time",
    "dtype-decimal",
    "dtype-duration",
    "dtype-i8",
    "dtype-i16",
    "ipc",
] }
quick-xml = "0.40"
thiserror = "2"
rayon = "1.10"
memmap2 = "0.9"
snap = "1"
arrow = { version = "0.53", package = "polars-arrow", default-features = false }

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"
